# tANS-Integration

./: CMakeLists.txt  README.md
receiver/: Makefile  native-config.h  receiver.c  tans_embedded.c  tans_embedded.h
sender/: Makefile  native-config.h  project-conf.h  sender.c
tans_native/: Makefile  project-conf.h  tans_embedded.c  tans_embedded.h  tans_native.c
tcp_cpp/: CMakeLists.txt  example.txt  receiver.cpp  sender.cpp  tANS.h
